@@ -172,6 +172,9 @@
 				RelativePath=".\getopt.c">
 			</File>
 			<File
+				RelativePath=".\C++\test\GroupTestCase.cpp">
+			</File>
+			<File
 				RelativePath=".\C++\test\HttpMessageTestCase.cpp">
 			</File>
 			<File
